# Fiducials-to-Model-Distance

./: .gitignore  CMakeLists.txt  README.md
FiducialToModelDistance/: CMakeLists.txt  FiducialToModelDistance.py  FiducialsToModelDistance.py
FiducialToModelDistance/Resources/UI/: FiducialToModelDistance.ui
FiducialtoModelDistance/: CMakeLists.txt
FiducialtoModelDistance/FiducialtoModelDistance/: CMakeLists.txt  FiducialtoModelDistance.py
FiducialtoModelDistance/FiducialtoModelDistance/Resources/UI/: FiducialtoModelDistance.ui
